--- a/dailydiary_front/src/component/main/style.scss
+++ b/dailydiary_front/src/component/main/style.scss
@@ -9,25 +9,42 @@ body{
     width : 100vw;
     height : 100vh;
     
-    #menu_bar_wrap{
-        width : 10%;
-      
-        
-        background-color: #374346;
-    }
 
-    #action_bar_wrap{
+    #action_wrap{
         width :90%;
+
+        #calendar_wrap{
+            height : 40%;
+
+            display:flex;
+            justify-content: center;
+            align-items : flex-start;
+
+            .react-calendar{
+                width  : 60vw;
+                max-height : 100%;
+                border:none;
+            }
+
+
+
+            .react-calendar__navigation__label{
+                
+            }
+        }
        
         #diary_wrap{
             
             width : 100%;
-            height : 70%;
+            height : 60%;
 
             display: flex;
             justify-content: center;
             align-items: center;
+
+            box-sizing: border-box;
            
+            border-top : 1px solid black;
 
             #diary_text{
 
@@ -38,10 +55,9 @@ body{
             }
         }
 
-        .react-calendar{
-            width : 100%;
-            height : 30%;
-        }
+       
     }
 }
+
+
 
