--- a/dailydiary_front/src/component/bar/style.scss
+++ b/dailydiary_front/src/component/bar/style.scss
@@ -5,36 +5,52 @@
     height : 100vh;
     
     #menu_bar_wrap{
-        width : 10%;
+        width : 240px;
       
         
-        background-color: #374346;
+        background-color: #F7F6F3;
 
         .button_wrap{
-            height : 50vh;
+            height : 100vh;
 
             box-sizing: border-box;
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            img{
-
-                cursor: pointer;
-                width : 100px;
-                height: 100px;
-                transition: 0.5s all;
             
-                &:hover{
-                    transform: scale(1.05, 1.05);
-                    transition: 0.5s all;
+            a{
+                display:flex;
+                flex-direction: row;
+                transition: background 120ms ease-in 0s;
+                height : 50px;
+                width : calc(100% - 28px);
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                color: rgba(25, 23, 17, 0.6);
+                font-weight: 500;
+                padding: 2px 14px;
+                text-decoration: none;
+                border-radius: 3px;
+                line-height: 1.5;
+                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+                font-size: 14px;
+                cursor: pointer;
+
+                img{
+
+                    cursor: pointer;
+                    height: 24px;
+                    width: 24px;
                 }
-            }
 
+                span{
+                    padding : 0 6px;
+                    margin : 0 6px;
+                }
 
-            &:first-child{
-                border-bottom : 1px  solid white;
+                &:hover{
+                    transition: background 120ms ease-in 0s;
+                        background : rgba(55, 53, 47, 0.08);
+                }
             }
         }
     }
