--- a/dailydiary_front/src/component/main/style.scss
+++ b/dailydiary_front/src/component/main/style.scss
@@ -58,10 +58,36 @@ body{
                 }
             }
 
+            #diary_footer{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height : 5vh;
+
+                #diary_add{
+                    cursor: pointer;
+                    display: block;
+                    color: inherit;
+                    text-decoration: none;
+                    background: white;
+                    border-radius: 3px;
+                    box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1);
+                    
+                    padding : 2px 10px;
+                    border:1px solid #EFEFEF;
+                    transition: background 120ms ease-in 0s;
+                    font-size: 20px;
+                    &:hover{
+                        transition: background 120ms ease-in 0s;
+                        background : rgba(55, 53, 47, 0.08);
+                    }
+                }
+            }
+
 
             #diary_action{
                 width : 100%;
-                height : calc(100% - 10vh);
+                height : calc(100% - 15vh);
               
 
                 #property_add_btn{
@@ -75,6 +101,7 @@ body{
                     height  : 40px;   
                     transition: background 120ms ease-in 0s;
                     margin : 0 10px;
+                   
                     &:hover{
                         transition: background 120ms ease-in 0s;
                         background : rgba(55, 53, 47, 0.08);
@@ -85,7 +112,9 @@ body{
                     list-style-type: none;
                     margin: 0;
                     padding : 0;
-
+                    height : calc(100% - 5vh);
+                    overflow-y: auto;
+                   
                   
 
                     .property_obj{
@@ -155,6 +184,8 @@ body{
 
                     
                 }
+
+                
             }
 
             #diary_btn_wraps{
@@ -168,9 +199,6 @@ body{
             
         }
 
-       
     }
 }
-
-
 
