--- a/dailydiary_front/src/component/main/style.scss
+++ b/dailydiary_front/src/component/main/style.scss
@@ -35,7 +35,7 @@ body{
             }
         }
        
-        #diary_wrap{
+        #diary_page{
             
             width : 100%;
             height : 60vh;
@@ -63,125 +63,46 @@ body{
                 justify-content: center;
                 align-items: center;
                 height : 5vh;
-
-                #diary_add{
-                    cursor: pointer;
-                    display: block;
-                    color: inherit;
-                    text-decoration: none;
-                    background: white;
-                    border-radius: 3px;
-                    box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1);
-                    
-                    padding : 2px 10px;
-                    border:1px solid #EFEFEF;
-                    transition: background 120ms ease-in 0s;
-                    font-size: 20px;
-                    &:hover{
-                        transition: background 120ms ease-in 0s;
-                        background : rgba(55, 53, 47, 0.08);
-                    }
-                }
+                font-weight: 600;
+                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
             }
 
 
-            #diary_action{
+            #diary_contents{
                 width : 100%;
                 height : calc(100% - 15vh);
               
+                #diary_wrote_list{
+                    height : 100%;
+                    box-sizing: border-box;
+                    width : 100%;
+                    padding : 15px 50px;
 
-                #property_add_btn{
-                    border:none;
-                    background : none;
-                    cursor: pointer;
-                    padding : 0 6px;
-                    color: rgba(55, 53, 47, 0.4);
-                    border-radius: 3px;
-                    width : 160px;
-                    height  : 40px;   
-                    transition: background 120ms ease-in 0s;
-                    margin : 0 10px;
-                   
-                    &:hover{
-                        transition: background 120ms ease-in 0s;
-                        background : rgba(55, 53, 47, 0.08);
-                    }
-                }
-
-                .propertys_wrap{
-                    list-style-type: none;
-                    margin: 0;
-                    padding : 0;
-                    height : calc(100% - 5vh);
-                    overflow-y: auto;
-                   
-                  
-
-                    .property_obj{
-                        display:flex;
-                        flex-direction: column;
-                        
-                        
-                        align-items: center;
-                        justify-content: center;
-                        .property{
+                    #diary_wrote_ul{
+                        width : 100%;
+                        height  :100%;
+                        margin : 0;
+                        padding : 0;
+                        list-style-type: none;
+                        overflow-y: auto;
+                        .diary_wrote_item{
                             
-                            width : 90%;
+                            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+                            font-size: 16px;
 
-                            input, .property_remove{
-                                
-                                border:none;
-                                color:#37352F;
-                                transition: background 120ms ease-in 0s;
-                                cursor: pointer;
-                                height : 40px;
-                                border-radius: 3px;
-
-                                &:focus{
-                                    outline: none;
-                                }
-
-                                
-                                &:hover{
-                                    transition: background 120ms ease-in 0s;
-                                    background : rgba(55, 53, 47, 0.08);
-                                }
+                            .diary_wrote_title{
+                                padding: 3px 2px;
+                                color: #37352F;
+                                font-weight: 600;
                             }
 
-                            .property_title{
-                                width : 160px;
-                                padding: 0 6px;
+                            .diary_wrote_txt{
+                                padding: 3px 2px;
 
-                                &::placeholder{
-                                    color:#D4D3D2;
-                                }
-                            }
-
-                            .property_content{
-                                width : 540px;
-                                padding: 6px 8px 7px;
-
-                                &::placeholder{
-                                    color:#CBCBC9;
-                                }
-                            }
-
-                            .property_remove{
-                                float:right;
-                                width : 40px;
-                                background: none;
-                                font-size: 18px;
+                                padding-left: 1.5em;
                             }
                         }
                     }
-                }
-                #diary_text{
-
-                    width : 80%;
-                    height : 50%;
-                    box-sizing: border-box;
-                    resize: none;
-
                     
                 }
 
