--- a/dailydiary_front/src/component/write/style.scss
+++ b/dailydiary_front/src/component/write/style.scss
@@ -37,16 +37,19 @@ body{
         #diary_add{
             cursor: pointer;
             display: block;
-            color: inherit;
+
             text-decoration: none;
             background: white;
             border-radius: 3px;
-            box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1);
             
-            padding : 2px 10px;
+            box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
+            color: rgba(55, 53, 47, 0.4);
+            
             border:1px solid #EFEFEF;
             transition: background 120ms ease-in 0s;
             font-size: 20px;
+            
+
             &:hover{
                 transition: background 120ms ease-in 0s;
                 background : rgba(55, 53, 47, 0.08);
@@ -71,6 +74,8 @@ body{
             height  : 40px;   
             transition: background 120ms ease-in 0s;
             margin : 0 10px;
+            
+        
            
             &:hover{
                 transition: background 120ms ease-in 0s;
@@ -164,6 +169,10 @@ body{
         box-sizing: border-box;
 
         background-color : #333;
+        
+           
+           
+            
     }
 
     
