--- a/dailydiary_front/src/component/login/style.scss
+++ b/dailydiary_front/src/component/login/style.scss
@@ -1,17 +1,99 @@
 #userpage_wrap{
-    width : 100%;
+   
     height : 100%;
+    width :calc(100vw - 240px);
+    background-color: #FFFEFB;
 
-    #login_wrap{
-        border:1px solid black;
+    input{
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+    }
+
+    .login_title_wrap{
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+        
+        height: 10vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        h2{
+            margin : 0 ;padding : 0;
+            letter-spacing : 2px;
+            font-weight: 700;
+            font-size: 28px;
+            color: rgb(55, 53, 47);
+        }
+    }
+
+    .login_action_button_wrap{
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+        
+        height: 10vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        button{
+            cursor: pointer;
+            transition: background 120ms ease-in 0s;
+            border-radius: 3px;
+            height: 32px;
+            padding: 0px 12px;
+            font-size: 14px;
+            line-height: 1.2;
+            background: white;
+            border: 1px solid rgba(55, 53, 47, 0.16);
+            box-shadow: rgba(15, 15, 15, 0.1) 0px 1px 2px;
+            margin-top: 20px;
+
+            &:hover{
+                transition: background 120ms ease-in 0s;
+                background-color : rgba(55, 53, 47, 0.08)
+            }
+        }
+    }
+
+    .login_action_wrap{
+            
+        width : 30%;
+        display: flex;
+        align-items: center;
+        
+        font-size: 14px;
+        line-height: 20px;
+        padding: 4px 10px;
+        position: relative;
+        border-radius: 3px;
+        box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset, rgba(15, 15, 15, 0.1) 0px 1px 1px inset;
+        background: white;
+        cursor: text;
+        
+        #usercode, #email{
+            font-size: inherit;
+            line-height: inherit;
+            border: none;
+            background: none;
+            width: 100%;
+            display: block;
+            resize: none;
+            padding: 0px;
+            
+        }
+
+    }
+
+    #login_wrap, #signup_wrap{
+
         
         height : 50vh;
-
         box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        
+        
+        
     }
-    #signup_wrap{
-       
-        height : 50vh;
-        box-sizing: border-box;
-    }
+ 
 }
